# canari

./: .gitignore  .pypirc.example  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-check.yml
canari/: __init__.py  __main__.py  alerter.py  api.py  cli.py  dashboard.py  detection.py  exporter.py  generator.py  incidents.py  injector.py  integrations.py  models.py  monitor.py  rate_limit.py  registry.py  reporting.py  scanner.py  threat_intel.py
docs/: alert-channels.md  architecture.md  cli-reference.md  enterprise.md  fix-plan-status.md  integration-guide.md  performance.md  phase_closure.md  phase_status.md  show-hn.md  threat-intelligence.md  token-types.md
docs/assets/: README.md
examples/: basic.py  langchain_like.py  llamaindex_like.py  openai_patch.py  runnable_like.py
examples/attack_demo/: README.md  app.py  attack_demo.tape  requirements.txt
tests/: test_adapters.py  test_alert_stats_rich.py  test_alert_store.py  test_alerter.py  test_alerter_retry.py  test_api_key_last_used.py  test_api_key_rotation.py  test_api_keys.py  test_application_scope.py  test_audit.py  test_backup.py  test_cli.py  test_cli_alert_stats.py  test_cli_alerter_health.py  test_cli_api_keys.py  test_cli_api_keys_rotate.py  test_cli_audit.py  test_cli_backup.py  test_cli_dashboard.py  test_cli_doctor.py  test_cli_export_redact.py  test_cli_fastapi.py  test_cli_incident_replay.py  test_cli_incident_report.py  test_cli_policy.py  test_cli_retention.py  test_cli_rotate.py  test_cli_seed_scope.py  test_cli_tenant.py  test_cli_threat_feed.py  test_cli_threat_sharing.py  test_cli_time_filters.py  test_client_alert_history.py  test_client_alerter_health.py  test_client_correlation.py  test_client_rate_limit.py  test_client_stats.py  test_client_tenant.py  test_control_plane.py  test_core_leak_detector_basics.py  (+42 more)
