[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canari"
version = "0.1.0"
description = "Canary-token IDS primitives for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Canari"}
]
license = {text = "MIT"}
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27"
]

[project.scripts]
canari = "canari.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]
openai = [
  "openai>=1.0"
]
langchain = [
  "langchain-core>=0.2"
]
llamaindex = [
  "llama-index-core>=0.10"
]
speed = [
  "pyahocorasick>=2.0.0"
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.30"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["canari*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
