[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canari-llm"
version = "0.1.3"
description = "Local-first honeypot token IDS for LLM and RAG applications."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [
  {name = "Christopher Holmes", email = "c.holmes.silva@gmail.com"}
]
license = {text = "MIT"}
keywords = [
  "llm",
  "rag",
  "security",
  "prompt-injection",
  "canary-token",
  "honeypot",
  "detection",
  "incident-response",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "pydantic>=2.6",
  "httpx>=0.27"
]

[project.urls]
Homepage = "https://pypi.org/project/canari-llm/"
Repository = "https://github.com/cholmess/canari"
Issues = "https://github.com/cholmess/canari/issues"

[project.scripts]
canari = "canari.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]
openai = [
  "openai>=1.0"
]
langchain = [
  "langchain-core>=0.2"
]
llamaindex = [
  "llama-index-core>=0.10"
]
speed = [
  "pyahocorasick>=2.0.0"
]
api = [
  "fastapi>=0.110",
  "uvicorn>=0.30"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["canari*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
